leptos_macro/tests/view/38_slot_generic_prop_wrong_type.stderr
error[E0277]: `bool` is not a valid type for prop `generic_fun` on slot `HelloSlot`
  --> tests/view/38_slot_generic_prop_wrong_type.rs:27:57
   |
27 |             <HelloSlot slot concrete_i32=42 generic_fun=true>
   |                                                         ^^^^ the trait `Fn()` is not implemented for `bool`
   |
   = note: required: `Fn() -> bool` — a closure or function reference
note: required for `bool` to implement `__Check_generic_fun`
  --> tests/view/38_slot_generic_prop_wrong_type.rs:7:1
   |
 7 | #[slot]
   | ^^^^^^^
 8 | struct HelloSlot<F: Fn() -> bool> {
   |                     ------------ unsatisfied trait bound introduced here
note: required by a bound in `__Helper::<F>::__check_generic_fun`
  --> tests/view/38_slot_generic_prop_wrong_type.rs:7:1
   |
 7 | #[slot]
   | ^^^^^^^ required by this bound in `__Helper::<F>::__check_generic_fun`
   = note: this error originates in the attribute macro `slot` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `__unwrap` exists for struct `__Wrap_generic_fun<bool>`, but its trait bounds were not satisfied
  --> tests/view/38_slot_generic_prop_wrong_type.rs:27:57
   |
 7 | #[slot]
   | ------- method `__unwrap` not found for this struct
...
27 |             <HelloSlot slot concrete_i32=42 generic_fun=true>
   |                                                         ^^^^ method cannot be called on `__Wrap_generic_fun<bool>` due to unsatisfied trait bounds
   |
note: the following trait bounds were not satisfied:
      `bool: Fn<()>`
      `bool: FnOnce<()>`
  --> tests/view/38_slot_generic_prop_wrong_type.rs:8:21
   |
 7 | #[slot]
   | -------
 8 | struct HelloSlot<F: Fn() -> bool> {
   |                     ^^^^^^^^^^^^
   |                     |       |
   |                     |       unsatisfied trait bound introduced here
   |                     unsatisfied trait bound introduced here
